implement basic timer and start button

--- a/new_tomato_app/index.html
+++ b/new_tomato_app/index.html
@@ -6,8 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Focus Better</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body class="red_background">
+    <div id="app">
+
+      <div>
+        <h1>Hello World!</h1>
+      </div>
+
+      <div class="timer">
+        <button id="timer_start">Start Focus</button>
+        <p id="timer-display">timer</p>
+      </div>
+
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
