--- a/new_tomato_app/index.html
+++ b/new_tomato_app/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Focus Better</title>
-  </head>
-  <body class="red_background">
-    <div id="app">
 
-      <div>
-        <h1>Hello World!</h1>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Focus Better</title>
+</head>
 
-      <div class="timer">
-        <button id="timer_start">Start Focus</button>
-        <p id="timer-display">timer</p>
-      </div>
+<body class="red_background">
+  <div id="app">
+
+    <div>
+      <h1>Hello World!</h1>
+    </div>
+
+    <div class="timer">
+
+      <!-- countdown timer button -->
+      <button id="timer_start">Start 25 min focus</button>
+
+      <!-- timer display -->
+      <p id="timer-display">Timer</p>
 
     </div>
-    <script type="module" src="/main.js"></script>
-  </body>
+
+  </div>
+  <script type="module" src="/main.js"></script>
+</body>
+
 </html>
