implement header info & head body divider

--- a/new_tomato_app/index.html
+++ b/new_tomato_app/index.html
@@ -6,9 +6,19 @@
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Focus Better</title>
+
+  <div class="head-content-flex">
+    <p class="flex-child head-title">Tomato Timer Plus</p>
+    <p class="flex-child">Developed by Noah Jackson</p>
+  </div>
+
+  <div>
+    <div class="divider div-transparent div-dot"></div>
+  </div>
+  
 </head>
 
-<body class="red_background">
+<body class="red-background">
   <div id="app">
 
     <div>
@@ -18,7 +28,7 @@
     <div class="timer">
 
       <!-- countdown timer button -->
-      <button id="timer_start">Start 25 min focus</button>
+      <button id="timer-start">Start 25 min focus</button>
 
       <!-- timer display -->
       <p id="timer-display">Timer</p>
