add timer end sound functionality

--- a/new_tomato_app/index.html
+++ b/new_tomato_app/index.html
@@ -29,6 +29,7 @@
 
       <!-- countdown timer button -->
       <button id="timer-start">Start 25 min focus</button>
+      <button id="test-button">play sound</button>
 
       <!-- timer display -->
       <p id="timer-display">Timer</p>
