set timer length with buttons and see timer length before starting

--- a/new_tomato_app/index.html
+++ b/new_tomato_app/index.html
@@ -21,18 +21,23 @@
 <body class="red-background">
   <div id="app">
 
-    <div>
-      <h1>Hello World!</h1>
-    </div>
-
     <div class="timer">
 
-      <!-- countdown timer button -->
-      <button id="timer-start">Start 25 min focus</button>
-      <button id="test-button">play sound</button>
+      <div>
+        <!-- timer display -->
+        <p id="timer-display">Timer</p>
+      </div>
 
-      <!-- timer display -->
-      <p id="timer-display">Timer</p>
+      <div>
+        <!-- countdown timer button -->
+        <button id="timer-start">Start Focus</button>
+        <button id="test-button">Test Sound</button>
+      </div>
+
+      <div>
+        <button id="25-minute-timer">Set 25 Minute Focus</button>
+        <button id="5-minute-timer">Set 5 Minute Break</button>
+      </div>
 
     </div>
 
