refactor css comments and comment out timer toggle

--- a/new_tomato_app/index.html
+++ b/new_tomato_app/index.html
@@ -21,22 +21,23 @@
 <body class="red-background">
   <div id="app">
 
-    <div class="timer">
-
+    <div>
+      
       <div>
-        <!-- timer display -->
-        <p id="timer-display">Timer</p>
-      </div>
-
-      <div>
-        <!-- countdown timer button -->
-        <button id="timer-start">Start Focus</button>
-        <button id="test-button">Test Sound</button>
-      </div>
-
-      <div>
+        <!-- set timer length for pomodoro + short & long break -->
         <button id="25-minute-timer">Set 25 Minute Focus</button>
         <button id="5-minute-timer">Set 5 Minute Break</button>
+      </div>
+
+        <div class="timer">
+          <!-- timer display -->
+          <h1 id="timer-display">Timer</h1>
+        </div>
+
+      <div>
+        <!-- start timer -->
+        <button id="timer-start">Start Focus</button>
+        <button id="test-button">Test Sound</button>
       </div>
 
     </div>
