add theme transitions and other improvements

--- a/new_tomato_app/index.html
+++ b/new_tomato_app/index.html
@@ -18,7 +18,7 @@
   
 </head>
 
-<body class="red-background">
+<body id="site-body" class="pomodoro-red">
   <div id="app">
 
     <div class="border">
@@ -30,7 +30,7 @@
         <button id="long-break-button" class="rounded-button button-flex-child">Long Break</button>
       </div>
 
-        <div class="timer">
+        <div id="timer-container" class="timer large-text">
           <!-- timer display -->
           <h1 id="timer-display">25:00</h1>
         </div>
