--- a/new_tomato_app/index.html
+++ b/new_tomato_app/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+  <link rel="icon" type="image/svg+xml" href="timer.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Focus Better</title>
 
   <div class="head-content-flex">
-    <p class="flex-child head-title">Tomato Timer Plus</p>
+    <p class="flex-child head-title">PomTimer</p>
     <p class="flex-child">Developed by Noah Jackson</p>
   </div>
 
