install easytimer.js with npm

--- a/new_tomato_app/index.html
+++ b/new_tomato_app/index.html
@@ -42,6 +42,8 @@
 
     </div>
 
+    <button id="test-button">test button</button>
+
   </div>
   <script type="module" src="/main.js"></script>
 </body>
