add task submission box and button

--- a/new_tomato_app/index.html
+++ b/new_tomato_app/index.html
@@ -42,6 +42,15 @@
 
     </div>
 
+    <div style="padding-top: 30px; padding-bottom: 30px;">
+
+      <form style>
+        <label for="new-task">New Task:</label>
+        <input type="text" id="new-task">
+      </form>
+      <button id="submit-button">Submit</button>
+    </div>
+
     <button id="test-button">test button</button>
 
   </div>
