tasks now display to user when submitted, deleted when session ends

--- a/new_tomato_app/index.html
+++ b/new_tomato_app/index.html
@@ -44,16 +44,27 @@
 
     <div style="padding-top: 30px; padding-bottom: 30px;">
 
+      <!-- form to submit new tasks -->
       <form style>
         <label for="new-task">New Task:</label>
         <input type="text" id="new-task">
       </form>
+      <!-- submit button for new task box -->
       <button id="submit-button">Submit</button>
+
+      <!-- list to display current tasks -->
+      <ul class="task-list">
+        <li>sample task</li>
+      </ul>
+
     </div>
 
+    <!-- test button for testing sound and other experimental features -->
     <button id="test-button">test button</button>
 
   </div>
+
+  
   <script type="module" src="/main.js"></script>
 </body>
 
