break main into tasks and timer files, implement easyTimer.js

--- a/new_tomato_app/index.html
+++ b/new_tomato_app/index.html
@@ -8,7 +8,12 @@
   <link rel="icon" type="image/svg+xml" href="./misc_project_files/PomTimer-logo-small.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- importing js code from main.js -->
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="./js/main.js"></script>
+  <!-- including jquery in project using cdn -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" 
+          integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" 
+          crossorigin="anonymous">
+  </script>
   <title>Focus Better</title>
 
   <!-- content shown above divider -->
@@ -84,9 +89,6 @@
       </section>
 
     </div>
-
-    <!-- test button for testing sound and other experimental features -->
-    <button id="test-button">test button</button>
 
   </div>
 
