timer resets properly when appropriate

--- a/new_tomato_app/index.html
+++ b/new_tomato_app/index.html
@@ -64,7 +64,7 @@
       <section class="task-list">
 
         <!-- current tasks header -->
-        <h2 class="tasks-header">Current tasks</h2>
+        <h2 class="tasks-header">Tasks</h2>
         <hr style="max-width: 600px"/>
 
         <!-- all tasks here -->
