add active task below start focus button html and css

--- a/new_tomato_app/index.html
+++ b/new_tomato_app/index.html
@@ -48,6 +48,10 @@
         <button id="timer-pause" class="animated-button hide">Pause</button>
       </div>
 
+      <div>
+        <p id = "active-task" class="active-task"> Active task shown here </p>
+      </div>
+
     </div>
 
     <!-- all content for task section here -->
