skeleton code for data objects in data.js

--- a/new_tomato_app/index.html
+++ b/new_tomato_app/index.html
@@ -18,9 +18,6 @@
         <button class="header-button" style="justify-content: left;">Profile: nojackson99</button>
         
         <div class="dropdown-content">
-          <p>j.menden</p>
-          <p>nojackson99</p>
-          <p>akelley883</p>
           <p id="create-new-profile">Create New Profile</p>
         
         </div>
@@ -58,7 +55,7 @@
     </dialog>
   
     <dialog class="modal" id="settings-modal">
-        <h1 class="modal-title">Settings</h1>
+        <h1 class="modal-title">Session Lengths</h1>
         <p class="close" id="close-settings-modal"></p>
         <hr/>
         <form action="" class="modal-form" autocomplete="off">
