--- a/new_tomato_app/index.html
+++ b/new_tomato_app/index.html
@@ -15,7 +15,7 @@
 
       <div class="dropdown" >
       
-        <button class="header-button" style="justify-content: left;">Profile: nojackson99</button>
+        <button class="header-button" style="justify-content: left;">Profile:</button>
         
         <div class="dropdown-content" id="dropdown-content">
           <p id="create-new-profile">Create New Profile</p>
@@ -130,7 +130,7 @@
       <section class="task-list">
 
         <!-- current tasks header -->
-        <h2 class="tasks-header">Tasks</h2>
+        <h2 class="tasks-header" id="tasks-header">Tasks</h2>
         <hr style="max-width: 600px"/>
 
         <!-- all tasks here -->
