change session lengths in settings

--- a/new_tomato_app/index.html
+++ b/new_tomato_app/index.html
@@ -15,7 +15,7 @@
 
       <div class="dropdown" >
       
-        <button class="header-button" style="justify-content: left;">Profile:</button>
+        <button class="header-button" style="justify-content: left;">Profile</button>
         
         <div class="dropdown-content" id="dropdown-content">
           <p id="create-new-profile">Create New Profile</p>
@@ -58,11 +58,11 @@
         <hr/>
         <form class="modal-form" autocomplete="off" method="dialog">
           <label for="pomodoro-length">Pomodoro</label>
-          <input type="number"  name="pomodoro-length" id="pomodoro-length">
+          <input type="number"  name="pomodoro-length" id="pomodoro-length" value="">
           <label for="short-length">Short Break</label>
-          <input type="number" name="short-length" id="settings-short-length">
+          <input type="number" name="short-break" id="settings-short-break" value="">
           <label for="long-length">Long Break</label>
-          <input type="number" name="long-length" id="settings-long-length">
+          <input type="number" name="long-break" id="settings-long-break" value="">
           <input type="submit" id="settings-submit">
         </form>
         <hr/>
