--- a/new_tomato_app/index.html
+++ b/new_tomato_app/index.html
@@ -137,7 +137,7 @@
         <div id="tasks">
 
           <!-- sample task -->
-          <div class="task">
+          <!-- <div class="task">
             <div class="content">
               <input type="text" class="text task-input" value="My task" readonly/>
               <span/>
@@ -146,7 +146,7 @@
               <button class="edit rounded-button">Edit</button>
               <button class="delete rounded-button">Delete</button>
             </div>
-          </div>
+          </div> -->
 
         </div>
       </section>
