when session ends update progress tracker and properly indicate when task is complete

--- a/new_tomato_app/index.html
+++ b/new_tomato_app/index.html
@@ -167,6 +167,7 @@
   </script>
 </body>
 
-<button id="test-button">test button</button>
+<button id="test-button">load test data</button>
+<button id="test-button2">display active profile</button>
 
 </html>
