all major features working

--- a/new_tomato_app/index.html
+++ b/new_tomato_app/index.html
@@ -168,6 +168,6 @@
 </body>
 
 <button id="test-button">load test data</button>
-<button id="test-button2">simulate session finish</button>
+<button id="test-button2">switchProfile()</button>
 
 </html>
