--- a/new_tomato_app/index.html
+++ b/new_tomato_app/index.html
@@ -122,7 +122,7 @@
       <!-- form to submit new tasks -->
       <form id="task-form" class="new-task-form" autocomplete="off">
         <input type="text" id="new-task-input" placeholder="What is your focus?" class="item new-task-input task-theme">
-        <input type="number" id="new-task-length" placeholder="Length?" class="item new-task-length task-theme">
+        <input type="number" id="new-task-length" placeholder="Length?" class="item new-task-length task-theme" max="9">
         <input type="submit" id="new-task-submit" value="Add task" class="animated-button smaller item new-task-submit"> 
       </form>
 
