implement new test buttons and create storage.js

--- a/new_tomato_app/index.html
+++ b/new_tomato_app/index.html
@@ -157,5 +157,7 @@
 <!-- debug buttons -->
 <button id="test-button">load test data</button>
 <button id="test-button2">switchProfile()</button>
+<button id="test-button3">simulate timer end</button>
+<button id="test-button4">show profiesArray</button>
 
 </html>
