--- a/new_tomato_app/index.html
+++ b/new_tomato_app/index.html
@@ -156,8 +156,9 @@
 
 <!-- debug buttons -->
 <button id="test-button">load test data</button>
-<button id="test-button2">switchProfile()</button>
+<button id="test-button2">clear task display</button>
 <button id="test-button3">simulate timer end</button>
 <button id="test-button4">show profiesArray</button>
+<button id="test-button5">fetch test</button>
 
 </html>
