changes to allow css to load and easytimer immport on netlify

--- a/new_tomato_app/index.html
+++ b/new_tomato_app/index.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="UTF-8" />
   <!-- href is the icon shown on chrome tab -->
+  <link rel="stylesheet" href="./style.css" type ="text/css" />
   <link rel="icon" type="image/svg+xml" href="./misc_project_files/images/PomTimer-logo-small.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PomTimer</title>
@@ -141,6 +142,9 @@
     </div>
 
   </div>
+
+  <!-- easytimer.js script import -->
+  <script src="./node_modules//easytimer.js/dist/easytimer.min.js"></script>
 
   <!-- importing js code from main.js -->
   <script 
