implement persistent session length data with local storage

--- a/new_tomato_app/index.html
+++ b/new_tomato_app/index.html
@@ -83,7 +83,7 @@
         <p class="close" id="close-settings-modal"></p>
         <hr />
 
-        <!-- session interval submisison form -->
+        <!-- session interval submission form -->
         <form class="modal-form" autocomplete="off" method="dialog">
           <label for="pomodoro-length">Pomodoro</label>
           <input
@@ -139,7 +139,7 @@
 
         <!-- timer display content -->
         <div id="timer-container" class="timer large-text">
-          <h1 id="timer-display">25:00</h1>
+          <h1 id="timer-display"></h1>
         </div>
 
         <!-- start focus/break button -->
@@ -205,9 +205,9 @@
   </body>
 
   <!-- debug buttons -->
-  <!-- <button id="test-button">load test data</button>
+  <button id="test-button">load test data</button>
   <button id="test-button2">clear task display</button>
-  <button id="test-button3">simulate timer end</button>
+  <!-- <button id="test-button3">simulate timer end</button> -->
   <button id="test-button4">show profiesArray</button>
-  <button id="test-button5">fetch test</button> -->
+  <!-- <button id="test-button5">fetch test</button> -->
 </html>
