adding console.logs to find when task edit is written to data

--- a/new_tomato_app/index.html
+++ b/new_tomato_app/index.html
@@ -191,7 +191,7 @@
       </div>
     </div>
 
-    <!-- easytimer.js script import -->
+    <!-- easyTimer.js script import -->
     <script src="./node_modules//easytimer.js/dist/easytimer.min.js"></script>
 
     <!-- importing js code from main.js -->
@@ -208,6 +208,6 @@
   <button id="test-button">load test data</button>
   <button id="test-button2">clear task display</button>
   <!-- <button id="test-button3">simulate timer end</button> -->
-  <button id="test-button4">show profiesArray</button>
+  <button id="test-button4">show profilesArray</button>
   <!-- <button id="test-button5">fetch test</button> -->
 </html>
